2011-01-26  Rik  <octave@nomad.inbox5.com>

	* scripts/general/interp1.m, scripts/general/interp2.m,
	scripts/general/interp3.m, scripts/general/interpn.m: Use em-dash
	rather than en-dash.
	* scripts/miscellaneous/mkoctfile.m: Use @code to prevent option
	turning to en-dash.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* mkdoc: Untabify.

	* mkdoc, gethelp.cc: Strip trailing whitespace.

2011-01-26  John W. Eaton  <jwe@octave.org>

	* general/curl.m: Simplify processing of outptut values.

2011-01-26  Olaf Till  <olaf.till@uni-jena.de>

	* pkg/pkg.m: Export environment variables MKOCTFILE and
	OCTAVE_CONFIG for configure and make, to configure also OCTAVE.

2011-01-24  John W. Eaton  <jwe@octave.org>

	* audio/lin2mu: Doc fix.

	* audio/mu2lin.m: Doc fix.
	For compatibility with Matlab, change default for N to be 8.

2011-01-22  Rik  <octave@nomad.inbox5.com>

	* miscellaneous/info.m: Use reference to bug tracker rather than
	octave-dev mailing list.

2011-01-22  Ben Abbott  <bpabbott@mac.com>

	* plot/meshc.m: Add note: gnuplot does not support filled 3D patches,
	or mixing non-filled contours with filled surfaces.
	* plot/subplot.m: Set "box" to "on" by default (same as Matlab).
	* plot/cylinder.m: Remove console output from demo.

2011-01-22  Konstantinos Poulios  <logari81@googlemail.com>

	* plot/plotyy.m: Set box property to off to allow both y-axes colors
	to be visible for OpenGL backends.

2011-01-22  John W. Eaton  <jwe@octave.org>

	* plot/private/__scatter__.m: Don't accept "filled" as a color.
	* plot/scatter.m: Doc fix.
	Bug #32204.

2011-01-21  Konstantinos Poulios  <logari81@gmail.com>

	* plot/xlabel.m, plot/ylabel.m, plot/zlabel.m: Setting axis label
	color from axis color.

2011-01-20  Jordi Gutiérrez Hermoso  <jordigh@gmail.com>

	* image/imshow.m: Fix handling of clim and display_range so that
	images are more faithfully reproduced.

2011-01-20  Rik  <octave@nomad.inbox5.com>

	* scripts/image/imshow.m, scripts/image/saveimage.m,